// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. scale correctly when spreading fingers 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "transform": Array [
            Object {
              "translateX": -15,
            },
            Object {
              "translateY": -25,
            },
            Object {
              "translateX": 55,
            },
            Object {
              "translateY": 15,
            },
            Object {
              "scale": 3,
            },
            Object {
              "translateX": -55,
            },
            Object {
              "translateY": -15,
            },
            Object {
              "translateX": 15,
            },
            Object {
              "translateY": 25,
            },
            Object {
              "rotate": "0 deg",
            },
            Object {
              "perspective": 1000,
            },
          ],
        }
      }
    >
      <Text>
        Hello world!
      </Text>
    </View>
  </View>
</View>
`;

exports[`2. rotate anti-clockwise when turning fingers 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "transform": Array [
            Object {
              "translateX": -15,
            },
            Object {
              "translateY": -25,
            },
            Object {
              "translateX": 30,
            },
            Object {
              "translateY": 15,
            },
            Object {
              "scale": 1,
            },
            Object {
              "translateX": -30,
            },
            Object {
              "translateY": -15,
            },
            Object {
              "translateX": 15,
            },
            Object {
              "translateY": 25,
            },
            Object {
              "rotate": "90 deg",
            },
            Object {
              "perspective": 1000,
            },
          ],
        }
      }
    >
      <Text>
        Hello world!
      </Text>
    </View>
  </View>
</View>
`;

exports[`3. rotate clockwise when turning fingers 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "transform": Array [
            Object {
              "translateX": -15,
            },
            Object {
              "translateY": -25,
            },
            Object {
              "translateX": 30,
            },
            Object {
              "translateY": 15,
            },
            Object {
              "scale": 1,
            },
            Object {
              "translateX": -30,
            },
            Object {
              "translateY": -15,
            },
            Object {
              "translateX": 15,
            },
            Object {
              "translateY": 25,
            },
            Object {
              "rotate": "270 deg",
            },
            Object {
              "perspective": 1000,
            },
          ],
        }
      }
    >
      <Text>
        Hello world!
      </Text>
    </View>
  </View>
</View>
`;

exports[`4. scale and rotate when spreading and rotating fingers 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "transform": Array [
            Object {
              "translateX": -15,
            },
            Object {
              "translateY": -25,
            },
            Object {
              "translateX": 90,
            },
            Object {
              "translateY": 45,
            },
            Object {
              "scale": 2.9154759474226504,
            },
            Object {
              "translateX": -90,
            },
            Object {
              "translateY": -45,
            },
            Object {
              "translateX": 15,
            },
            Object {
              "translateY": 25,
            },
            Object {
              "rotate": "-5.906 deg",
            },
            Object {
              "perspective": 1000,
            },
          ],
        }
      }
    >
      <Text>
        Hello world!
      </Text>
    </View>
  </View>
</View>
`;

exports[`5. do nothing if a finger is removed while interacting 1`] = `
<View
  style={
    Object {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "transform": Array [
            Object {
              "translateX": -15,
            },
            Object {
              "translateY": -25,
            },
            Object {
              "translateX": -20,
            },
            Object {
              "translateY": -60,
            },
            Object {
              "scale": 1,
            },
            Object {
              "translateX": 20,
            },
            Object {
              "translateY": 60,
            },
            Object {
              "translateX": 15,
            },
            Object {
              "translateY": 25,
            },
            Object {
              "rotate": "0 deg",
            },
            Object {
              "perspective": 1000,
            },
          ],
        }
      }
    >
      <Text>
        Hello world!
      </Text>
    </View>
  </View>
</View>
`;
